--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
 # Web Sémantique
 rdflib==7.0.0
 owlready2==0.45
+SPARQLWrapper==2.0.0
 
-# NLP
-spacy==3.7.2
-transformers==4.36.0
-torch==2.4.0
-sentence-transformers==2.2.2
+# NLP / Embeddings
+transformers>=4.57.3
+torch>=2.9.1
+sentence-transformers>=5.2.0
 
 # Chatbot & Interface
-streamlit==1.29.0
-langchain==0.1.0
+streamlit>=1.52.0
+langchain>=1.2.0
 
 # Utilitaires
-pandas==2.1.4
-numpy==1.26.2
-python-dotenv==1.0.0
+pandas>=2.3.3
+numpy>=2.3.2
+python-dotenv>=1.0.0
